--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -88,6 +88,25 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .create-ad-container {
+    .meta-area, .image-area {
+      width: 100%;
+      float: none;
+      border: 0;
+    }
+    .image-area {
+      min-height: 0;
+    }
+    .image-preview.medium img {
+      max-width: 100%;
+    }
+    #create-ad-content {
+      display: none;
+    }
+  }
+}
+
 .user-profile-container {
   padding: 10px 20px;
 
