refactor javascript ad-desc to ad-social.

--- a/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
@@ -32,7 +32,7 @@
         callback: function(a, b) {
           var $users = $('.jscroll-added:last .user');
           $masonry = $('.masonry').masonry('appended', $users);
-          $users.find('.ad-desc').ajaxlink('follow_user');
+          $users.find('.ad-social').ajaxlink('follow_user');
         }
       });
     });
