--- a/src/Adstacy/AppBundle/Resources/views/App/index.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/index.html.twig
@@ -12,7 +12,7 @@
     {% set id = ad.id %}
     {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad} %}
   {% endfor %}
-  {% if ads | length >= max_ads_per_page %}
+  {% if ads|length >= max_ads_per_page %}
     <a href="{{ path('homepage', {'id': id})}}" class="btn btn-lg btn-default btn-block next-page">More</a>
   {% endif %}
 {% endblock %}
@@ -27,7 +27,7 @@
           var $ads = $('.jscroll-added:last .ad');
           $masonry = $('.masonry').masonry('appended', $ads);
           $ads.find('img.lazy').lazyload();
-          $ads.find('.ad-desc').ajaxlink('ads');
+          $ads.find('.ad-social').ajaxlink('ads');
           $ads.find('[data-toggle="tooltip"]').tooltip();
         }
       });
