--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -11,7 +11,7 @@
     {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad} %}
   {% endfor %}
   {% if paginator.hasNextPage %}
-    {% set params = app.request.query.all | merge({page: paginator.getNextPage}) %}
+    {% set params = app.request.query.all|merge({page: paginator.getNextPage}) %}
     <a href="{{ path('adstacy_app_stream', params )}}" class="btn btn-lg btn-default btn-block next-page">More</a>
   {% endif %}
 {% endblock %}
@@ -26,7 +26,7 @@
           var $ads = $('.jscroll-added:last .ad');
           $masonry = $('.masonry').masonry('appended', $ads);
           $ads.find('img.lazy').lazyload();
-          $ads.find('.ad-desc').ajaxlink('ads');
+          $ads.find('.ad-social').ajaxlink('ads');
         }
       });
     });
