--- a/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
@@ -33,7 +33,7 @@
           var $ads = $('.jscroll-added:last .ad');
           $masonry = $('.masonry').masonry('appended', $ads);
           $ads.find('img.lazy').lazyload();
-          $ads.find('.ad-desc').ajaxlink('ads');
+          $ads.find('.ad-social').ajaxlink('ads');
           $ads.find('[data-toggle="tooltip"]').tooltip();
         }
       });
