--- a/src/Adstacy/AppBundle/Resources/views/App/index.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/index.html.twig
@@ -13,7 +13,7 @@
     {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad} %}
   {% endfor %}
   {% if ads|length >= max_ads_per_page %}
-    <a href="{{ path('homepage', {'id': id})}}" class="btn btn-lg btn-default btn-block next-page">More</a>
+  <a href="{{ path('homepage', {'id': id})}}" class="btn btn-lg btn-default btn-block next-page">{{"more"|trans}}</a>
   {% endif %}
 {% endblock %}
 
