--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -89,7 +89,7 @@
                 </li>
               </ul>
               <form id="form-search" action="{{ path('adstacy_app_search') }}" class="navbar-form navbar-left" style="position: relative;" role="search">
-                <input id="search-bar" type="text" class="form-control" placeholder="Search" name="q" value="{{ app.request.query.get('q') }}" >
+                <input id="search-bar" type="text" class="form-control" placeholder="{{"search"|trans}}" name="q" value="{{ app.request.query.get('q') }}" >
                 <button type="submit" class="search-btn">
                   <span aria-hidden="true" class="icon-search"></span>
                 </button>
@@ -97,7 +97,7 @@
               <ul class="nav navbar-nav navbar-right">
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                   <li>
-                    <a href="{{ path('adstacy_app_ad_create') }}" id="create-ads" class="btn btn-primary navbar-btn" title="Create ad">
+                    <a href="{{ path('adstacy_app_ad_create') }}" id="create-ads" class="btn btn-primary navbar-btn" title="{{"ads.create"|trans}}">
                       <span aria-hidden="true" class="icon-plus"></span>
                     </a>
                   </li>
@@ -107,28 +107,28 @@
                         <img class="mini-profpic" src="{{ profile_pic(app.user) }}" alt="{{ app.user.username }}" /><span class="username-label">{{ app.user.username }}</span>
                       </button>
                       <ul class="dropdown-menu" role="menu">
-                        <li><a href="{{ path('adstacy_app_stream') }}">My Stream</a></li>
-                        <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}">Profile</a></li>
-                        <li><a href="{{ path('fos_user_profile_edit') }}">Settings</a></li>
-                        <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
+                        <li><a href="{{ path('adstacy_app_stream') }}">{{"stream"|trans}}</a></li>
+                        <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}">{{"profile"|trans}}</a></li>
+                        <li><a href="{{ path('fos_user_profile_edit') }}">{{"settings"|trans}}</a></li>
+                        <li><a href="{{ path('fos_user_security_logout') }}">{{"logout"|trans}}</a></li>
                       </ul>
                     </div>
                   </li>
                 {% else %}
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{"login"|trans}}<b class="caret"></b></a>
                     <ul class="dropdown-menu dropdown-container">
                       <li class="user-login">
                         {{ form_login() }}
                       </li>
                       <li class="social-login">
                         {% for owner in hwi_oauth_resource_owners() %}
-                          <a class="btn btn-primary btn-block btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">Login with {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
+                        <a class="btn btn-primary btn-block btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">{{"login.with"|trans}} {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
                         {% endfor %}
                       </li>
                       <li>
-                        <a href="{{ path('fos_user_registration_register') }}">Register new account</a>
-                        <a href="{{ path('fos_user_resetting_request') }}">Forgot password?</a>
+                        <a href="{{ path('fos_user_registration_register') }}">{{"register"|trans}}</a>
+                        <a href="{{ path('fos_user_resetting_request') }}">{{"password.forgot"|trans}}</a>
                       </li>
                     </ul>
                   </li>
@@ -147,10 +147,10 @@
               <li><a href="{{ path('adstacy_app_search', {q: 'rumah'}) }}" title="Rumah">Rumah</a></li>
             </ul>
             <ul id="footer" class="adstacy-container clearfix">
-              <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">about</a></li>
-              <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">terms</a></li>
-              <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">privacy policy</a></li>
-              <li><a href="{{ path('adstacy_app_contact') }}">contact us</a></li>
+              <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_contact') }}">{{"contact_us"|trans}}</a></li>
             </ul>
           </div>
         </nav>
