--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -32,8 +32,8 @@
         {% if app.user == user %}
           <span class="space"></span>
           <div class="btn-group btn-group-sm">
-            <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-default">Edit</a>
-            <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary">Delete</a>
+            <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-default">{{"edit"|trans}}</a>
+            <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary">{{"delete"|trans}}</a>
           </div>
         {% endif %}
       </div>
@@ -59,14 +59,14 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Delete Confirmation</h4>
+          <h4 class="modal-title">{{"ads.delete.confirm_title"|trans}}</h4>
         </div>
         <div class="modal-body">
-          <p>Are you sure you want to delete this ads?</p>
+          <p>{{"ads.delete.confirm_message"|trans}}</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <a href="{{ path('adstacy_app_ad_delete', {id: ad.id}) }}" class="btn btn-primary">DELETE!</a>
+          <button type="button" class="btn btn-default" data-dismiss="modal">{{"cancel"|trans}}</button>
+          <a href="{{ path('adstacy_app_ad_delete', {id: ad.id}) }}" class="btn btn-primary">{{"ads.delete.button"|trans}}</a>
         </div>
       </div>
     </div>
