--- a/src/Adstacy/AppBundle/Resources/views/Search/users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/users.html.twig
@@ -7,8 +7,8 @@
     </div>
   {% else %}
     <div class="jumbotron text-center">
-      <h1>No Results Found</h1>
-      <p class="lead">Please try a different keywords.</p>
+      <h1>{{"search.no_result.message"|trans}}</h1>
+      <p class="lead">{{"search.no_result.help"|trans}}</p>
     </div>
   {% endif %}
 {% endblock %}
