Add translation to form.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -128,7 +128,7 @@
                       </li>
                       <li>
                         <a href="{{ path('fos_user_registration_register') }}">{{"register"|trans}}</a>
-                        <a href="{{ path('fos_user_resetting_request') }}">{{"password.forgot"|trans}}</a>
+                        <a href="{{ path('fos_user_resetting_request') }}">{{"forgot_password"|trans}}</a>
                       </li>
                     </ul>
                   </li>
