--- a/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -12,7 +12,7 @@
 {% block content %}
   <div class="settings-container panel panel-default">
     <section class="settings-section">
-      <h1>Change Password</h1>
+      <h1>{{"form_password.title"|trans}}</h1>
       {{ form_start(form, { attr: { class: 'form-horizontal', role: 'form' } }) }}
         <div class="form-group">
           {{ form_label(form.current_password, label|default(null), { label_attr: { class: 'control-label' } }) }}
