--- a/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
@@ -2,11 +2,11 @@
 
 {% block content %}
   <div class="form-container panel panel-default" style="padding: 20px;">
-    <h1>Register</h1>
+    <h1>{{"form_registration.title"|trans}}</h1>
     {{ form_start(form) }}
       {% set submit = form_row(form.register) %}
       {{ form_rest(form) }}
-      <p>By clicking register, you agree to our <a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">Terms of Service</a> and <a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">Privacy Policy</a></p>
+      <p>{{"form_registration.agreement"|trans({'%terms_url%': path('adstacy_app_page_show', {key: 'terms'}), '%privacy_url%': path('adstacy_app_page_show', {key: 'privacy-policy'}) })|raw}}</p>
       {{ submit|raw }}
     {{ form_end(form) }}
   </div>
