custom contact us form.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -409,3 +409,30 @@ ul.nav-expand {
     }
   }
 }
+
+.main-container {
+  width: 750px;
+  margin: auto;
+
+  .control-label, .control-widget {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .control-label {
+    width: 160px;
+  }
+
+  .control-widget {
+    width: 560px;
+  }
+
+  .offset-control-label {
+    margin-left: 160px;
+  }
+
+  textarea.form-control {
+    resize: vertical;
+  }
+}
