fix register layout with form_theme.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -23,16 +23,6 @@ body {
   }
 }
 
-.form-container {
-  margin: 0 auto;
-  width: 400px;
-
-  h1 {
-    text-align: center;
-  }
-
-}
-
 .ads-form-section  {
   padding: 20px;
   border-bottom: 1px solid @border-color;
@@ -439,4 +429,9 @@ ul.nav-expand {
 
 span.required {
   color: red;
+}
+
+.form-container {
+  margin: auto;
+  width: 500px;
 }
