use icon on form header.

--- a/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
@@ -16,7 +16,8 @@
   <div class="main-container panel panel-default">
     <div class="panel-heading">
       <h1>
-        <span aria-hidden="true" class="icon-envelope-alt"></span> Contact Us
+        <span aria-hidden="true" class="icon-envelope-alt"></span>
+        Contact Us
       </h1>
     </div>
 
