--- a/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
@@ -13,7 +13,10 @@
 {% block content %}
   <div class="form-container panel panel-default">
     <div class="panel-heading">
-      <h1>{{ "form_registration.title"|trans }}</h1>
+      <h1>
+        <span aria-hidden="true" class="icon-pencil"></span>
+        {{ "form_registration.title"|trans }}
+      </h1>
     </div>
 
     {{ form_start(form, {attr: {class: 'panel-body', role: 'form'} }) }}
