--- a/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
@@ -1,28 +1,33 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 <form role="form" action="{{ path("fos_user_security_check") }}" method="post">
-  <div class="clearfix">
-    {% set targetPath = path('homepage') %}
-    {% if app.request.attributes.get('_route') != 'fos_user_security_login' and app.request.attributes.get('_route') != 'fos_user_registration_register' %}
-      {% set targetPath = app.request.uri %}
-    {% endif %}
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}">
-    <input type="hidden" name="_target_path" value="{{ targetPath }}">
+  {% set targetPath = path('homepage') %}
+  {% if app.request.attributes.get('_route') != 'fos_user_security_login' and app.request.attributes.get('_route') != 'fos_user_registration_register' %}
+    {% set targetPath = app.request.uri %}
+  {% endif %}
 
+  <input type="hidden" name="_csrf_token" value="{{ csrf_token }}">
+  <input type="hidden" name="_target_path" value="{{ targetPath }}">
+
+  <div class="form-group">
     <label for="username" class="hide">{{ 'security.login.username'|trans }}</label>
-    <input type="text" class="form-control input-sm" id="username" name="_username" required="required" placeholder="Username">
+    <input type="text" class="form-control" id="username" name="_username" required="required" placeholder="Username">
+  </div>
 
+  <div class="form-group">
     <label for="password" class="hide">{{ 'security.login.password'|trans }}</label>
-    <input type="password" class="form-control input-sm" id="password" name="_password" required="required" placeholder="Password">
+    <input type="password" class="form-control" id="password" name="_password" required="required" placeholder="Password">
+  </div>
 
-    <div class="h-stack">
-      <div class="stack-item w7">
+  <div class="form-group clearfix">
+    <div class="checkbox pull-left">
+      <label for="remember_me">
         <input type="checkbox" id="remember_me" name="_remember_me" value="on">
-        <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-      </div>
-      <div class="stack-item w3">
-        <input type="submit" class="btn btn-primary btn-sm pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">
-      </div>
+        {{ 'security.login.remember_me'|trans }}
+      </label>
+    </div>
+    <div class="pull-right">
+      <input type="submit" class="btn btn-primary" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">
     </div>
   </div>
 </form>
