--- a/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
@@ -11,50 +11,58 @@
 
 {% block content %}
   <div class="form-container panel panel-default">
-    <form class="form-horizontal" role="form" action="{{ path("fos_user_security_check") }}" method="post">
+    <div class="panel-heading">
       <h1>
         <span aria-hidden="true" class="icon-signin"></span>
         Login
       </h1>
+    </div>
 
-      <div class="ads-form-section">
-        {% for owner in hwi_oauth_resource_owners() %}
-          <a class="btn btn-block btn-lg btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">Login with {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
-        {% endfor %}
-      </div>
+    <div class="panel-body">
+      {% for owner in hwi_oauth_resource_owners() %}
+        <a class="btn btn-block btn-lg btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">Login with {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
+      {% endfor %}
+    </div>
 
-      <div class="ads-form-section">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}">
+    <hr>
 
+    <form class="panel-body" role="form" action="{{ path("fos_user_security_check") }}" method="post">
+      <input type="hidden" name="_csrf_token" value="{{ csrf_token }}">
+
+      <div class="form-group">
         <label for="_username" class="hide">{{ 'security.login.username'|trans }}</label>
         <input type="text" class="form-control input-lg" id="_username" name="_username" value="{{ last_username }}" required="required" placeholder="Username">
+      </div>
 
+      <div class="form-group">
         <label for="password" class="hide">{{ 'security.login.password'|trans }}</label>
         <input type="password" class="form-control input-lg" id="_password" name="_password" required="required" placeholder="Password">
+      </div>
 
-        <div class="h-stack">
-          <div class="stack-item w5">
+      <div class="form-group clearfix">
+        <div class="checkbox pull-left">
+          <label for="_remember_me">
             <input type="checkbox" id="_remember_me" name="_remember_me" value="on">
-            <label for="_remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
-          </div>
-          <div class="stack-item w5">
-            <input type="submit" class="btn btn-primary btn-lg pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}">
-          </div>
+            {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
+          </label>
         </div>
-
-        {% if error %}
-          <div class="alert alert-danger">{{ "security.login.failed"|trans({}, 'FOSUserBundle') }}</div>
-        {% endif %}
-      </div>
-
-      <div class="ads-form-section">
-        <div>
-          <a href="{{ path('fos_user_registration_register') }}">{{"register"|trans}}</a>
-        <div>
-        <div>
-          <a href="{{ path('fos_user_resetting_request') }}">{{"forgot_password"|trans}}</a>
+        <div class="pull-right">
+          <input type="submit" class="btn btn-primary btn-lg" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}">
         </div>
       </div>
+
+      {% if error %}
+        <div class="alert alert-danger">{{ "security.login.failed"|trans({}, 'FOSUserBundle') }}</div>
+      {% endif %}
     </form>
+
+    <div class="panel-footer">
+      <div>
+        <a href="{{ path('fos_user_registration_register') }}">{{ "register"|trans }}</a>
+      </div>
+      <div>
+        <a href="{{ path('fos_user_resetting_request') }}">{{ "forgot_password"|trans }}</a>
+      </div>
+    </div>
   </div>
 {% endblock %}
