--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -53,7 +53,8 @@
 // Custom theme
 @import "./variables.less";
 @import "./mixins.less";
-@import "./overrides.less";
 @import "./utilities.less";
+
 @import "./base/layout.less";
 @import "./base/ad.less";
+@import "./base/form.less";
