--- a/src/Adstacy/AppBundle/Resources/public/less/utilities.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/utilities.less
@@ -4,6 +4,16 @@
   white-space: nowrap;
 }
 
+.h-stack {
+  display: table;
+  width: 100%;
+
+  > .stack-item {
+    display: table-cell;
+    vertical-align: top;
+  }
+}
+
 .w1 { width: 10%; }
 .w2 { width: 20%; }
 .w3 { width: 30%; }
