--- a/src/Adstacy/UserBundle/Resources/views/Resetting/request.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/request.html.twig
@@ -3,16 +3,23 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block content %}
-<form action="{{ path('fos_user_resetting_send_email') }}" method="POST" class="fos_user_resetting_request">
-    <div>
+  <div class="form-container panel panel-default">
+    <div class="panel-heading">
+      <h1>Reset Password</h1>
+    </div>
+
+    <form action="{{ path('fos_user_resetting_send_email') }}" method="POST" class="panel-body fos_user_resetting_request" role="form">
+      <div class="form-group">
         {% if invalid_username is defined %}
-            <p>{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}) }}</p>
+          <p>{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}) }}</p>
         {% endif %}
         <label for="username">{{ 'resetting.request.username'|trans }}</label>
-        <input type="text" id="username" name="username" required="required" />
-    </div>
-    <div>
-        <input type="submit" value="{{ 'resetting.request.submit'|trans }}" />
-    </div>
-</form>
+        <input class="form-control" type="text" id="username" name="username" required="required">
+      </div>
+
+      <div class="form-group">
+        <input class="btn btn-primary" type="submit" value="{{ 'resetting.request.submit'|trans }}">
+      </div>
+    </form>
+  </div>
 {% endblock %}
