drop double declaration of user-profile-container and fix it margin.

--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -107,41 +107,6 @@
   }
 }
 
-.user-profile-container {
-  padding: 10px 20px;
-
-  .profile-picture {
-    float: left;
-    margin-right: 20px;
-    width: 100px;
-    img {
-      width: 100px;
-    }
-  }
-  .user-info {
-    float: left;
-    width: 85%;
-
-    .user-realname {
-      color: #555;
-      font-size: 24px;
-      margin: 0;
-      margin-bottom: 5px;
-    }
-    .user-about {
-      color: #888;
-      font-size: 16px;
-      line-height: 1.5;
-      margin: 0;
-      margin-bottom: 5px;
-    }
-    .profile-menu {
-      border-top: 1px solid #dfdfdf;
-      padding-top: 10px;
-    }
-  }
-}
-
 .user-thumb {
   width: 236px;
   height: 213px;
@@ -187,11 +152,16 @@
 
 .user-profile-container {
   padding: 10px 20px;
+  margin-left: 7px;
+  margin-right: 7px;
 
   .profile-picture {
     float: left;
     margin-right: 20px;
     width: 100px;
+    img {
+      width: 100px;
+    }
   }
   .user-info {
     float: left;
