Refactor settings page less.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -381,3 +381,16 @@ ul.nav-expand {
 span.required {
   color: red;
 }
+
+/* Refactored Class Name */
+.panel-section {
+  padding: 20px;
+
+  .title {
+    border-bottom: 1px solid #dfdfdf;
+    font-size: 32px;
+    margin: 0;
+    margin-bottom: 20px;
+    padding-bottom: 5px;
+  }
+}
