Refactor create ad form page.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -383,12 +383,16 @@ span.required {
 }
 
 /* Refactored Class Name */
+.panel {
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
 .panel-section {
   padding: 20px;
 
   .title {
     border-bottom: 1px solid #dfdfdf;
-    font-size: 32px;
+    font-size: 28px;
     margin: 0;
     margin-bottom: 20px;
     padding-bottom: 5px;
