Refactore search user page.

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -58,3 +58,6 @@
 @import "./base/layout.less";
 @import "./base/ad.less";
 @import "./base/form.less";
+@import "./settings.less";
+@import "./create_ad.less";
+@import "./user.less";
