--- a/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
@@ -1,17 +1,22 @@
 <div class="user-thumb panel panel-default">
-  <h4 class="user-realname"><a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.realname }}</a></h4>
   <div class="clearfix">
     <div class="profile-picture"><img src="{{ profile_pic(user) }}" /></div>
     <div class="user-info">
-      <div class="score-block">
-        <div class="score-block-label">Followers</div>
-        <div class="score-block-value"><a href="{{ path('adstacy_app_user_followers', {username: user.username}) }}" class="user-followers-count">{{ user.followersCount }}</a></div>
-      </div>
-      <div class="score-block">
-        <div class="score-block-label">Ads</div>
-        <div class="score-block-value"><a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">{{ user.adsCount }}</a></div>
-      </div>
+      <h5 class="user-realname text-overflow"><a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.realname }}</a></h5>
+      <p class="user-score">
+        <a href="{{ path('adstacy_app_user_followers', {username: user.username}) }}" class="user-followers-count">{{ user.followersCount }} Followers</a> &nbsp; &nbsp;
+        <a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">{{ user.adsCount }} Ads</a>
+      </p>
     </div>
   </div>
+
+  <p class="user-about text-overflow">{{ user.about }}</p>
+
+  {% set loggedInUser = app.user %}
+  {% if user and loggedInUser and user == loggedInUser %}
+    <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}" class="btn btn-success btn-block follow-user">View Profile</a>
+  {% endif %}
+
   {% include 'AdstacyAppBundle:User:follow_button.html.twig' with {user: user} %}
+
 </div>
